--- a/css/biblioteca_estilos.css
+++ b/css/biblioteca_estilos.css
@@ -1,5 +1,3 @@
-CSS
------
 
 
 p{
@@ -19,7 +17,7 @@ h3{
     color: purple;
 }
 body{
-    background-color: darkgray;
+    background-color: rgb(242, 248, 248);
 }
 .listas{
     font-size: 12px;
@@ -49,4 +47,3 @@ label{
 .div4{
     background-color: rgb(241, 241, 237);
 }
-
