--- a/css/biblioteca_estilos.css
+++ b/css/biblioteca_estilos.css
@@ -1,4 +1,16 @@
 
+a{
+    font-size: 14px;
+    font-family: Verdana;
+    color: rgb(121, 122, 121);
+}
+
+table{
+    font-size: 14px;
+    font-family: Verdana;
+    color: rgb(121, 122, 121);
+    background-color:rgb(231, 224, 210);
+}
 
 p{
     font-size: 14px;
@@ -6,23 +18,23 @@ p{
     color: green;
 }
 h3{
-    font-size: 16px;
+    font-size: 12px;
     font-family: Verdana;
     color: grey;
-    text-align: center;
-    
 }
 .menu{
     font-size: 14px;
     font-weight: bold;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: purple;
+    font-family: Verdana;
+    color: rgb rgb(125, 126, 125);
+    
 }
 body{
-    background-color: rgb(241, 241, 237);
+    background-color: white;
 }
 .listas{
     font-size: 12px;
+    font-family: Verdana;
     color: rgb(247, 247, 8);
 }
 
@@ -30,13 +42,16 @@ body{
     color: yellow;
     background-color: yellowgreen;
 }
+label{
+    color: coral;
+    font-family: Verdana;
+}
 .container{
+    border:0px solid white;
     width:500px;
-    background-color: rgb(241, 241, 237);
-    
 }
 .div1{
-    background-color: rgb(241, 241, 237);
+    background-color:white);
 }
 .div2{
     background-color:rgb(241, 241, 237);
@@ -47,4 +62,3 @@ body{
 .div4{
     background-color: rgb(241, 241, 237);
 }
-
