alteracoes no layout do relatorio

--- a/css/biblioteca_estilos_login.css
+++ b/css/biblioteca_estilos_login.css
@@ -31,7 +31,7 @@ body{
     background-color: yellowgreen;
 }
 .container{
-    
+    width: 500px;
     background-color: rgb(241, 241, 237);
     
 }
